# mercadolibre-test

./: .gitignore  README.md  ejercicio1_text_classification.ipynb  pyproject.toml
Ejercicio 2/: ejercicio2_1_forecasting_data_read.ipynb  ejercicio2_2_forecasting_eda.ipynb  ejercicio2_3_forecasting_models.ipynb
