[project]
name = "mercadolibre-test"
version = "0.1.0"
description = "Pruebta técnica de Mercado Libre para Data Science"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.3",
    "nbformat>=5.10.4",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "statsmodels>=0.14.4",
    "torch>=2.5.1",
    "transformers>=4.47.0",
]

[project.optional-dependencies]
optional = [
    "ipywidgets>=8.1.5",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "platform_system != 'Darwin'"},
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
